add swagger documentation for opening endpoints
