# handler/create_opening_handler.go
@@ -7,9 +7,21 @@ import (
 	"github.com/lidiagaldino/go-first-api/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Create opening
+// @Description Create a new job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param request body CreateOpeningRequest true "Request body"
+// @Success 201 {object} CreateOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /opening [post]
 func CreateOpeningHandler(ctx *gin.Context) {
 	request := CreateOpeningRequest{}
-	
+
 	ctx.BindJSON(&request)
 	if err := request.Validate(); err != nil {
 		logger.Errorf("error validating request: %v", err.Error())
