# handler/update_opening_handler.go
@@ -7,6 +7,20 @@ import (
 	"github.com/lidiagaldino/go-first-api/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Update opening
+// @Description Update a job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param id path int true "Opening Identification"
+// @Param opening body UpdateOpeningRequest true "Opening data to Update"
+// @Success 200 {object} UpdateOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /opening/{id} [put]
 func UpdateOpeningHandler(ctx *gin.Context) {
 	id := ctx.Param("id")
 	request := UpdateOpeningRequest{}
@@ -17,7 +31,7 @@ func UpdateOpeningHandler(ctx *gin.Context) {
 		logger.Errorf("error validating request: %s", err.Error())
 		sendError(ctx, http.StatusBadRequest, err.Error())
 		return
-	}	
+	}
 
 	if id == "" {
 		sendError(ctx, http.StatusBadRequest, errParamIsRequired("id", "param").Error())
@@ -25,12 +39,12 @@ func UpdateOpeningHandler(ctx *gin.Context) {
 	}
 
 	opening := schemas.Opening{
-		Role: request.Role,
-		Company: request.Company,
+		Role:     request.Role,
+		Company:  request.Company,
 		Location: request.Location,
-		Remote: *request.Remote,
-		Link: request.Link,
-		Salary: request.Salary,
+		Remote:   *request.Remote,
+		Link:     request.Link,
+		Salary:   request.Salary,
 	}
 
 	if err := db.Model(&opening).Where("id = ?", id).Updates(opening).Error; err != nil {
